Finished Part One

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Tom and Cameron">
     <title>Cameron Pittman: Portfolio</title>
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
-    <!-- build:css css/style.min.css -->
+
+    <!-- build:inlinecss -->
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
 
@@ -66,5 +66,7 @@
 <!-- build:js js/perfmatters.min.js -->
 <script src="js/perfmatters.js" async></script>
 <!-- endbuild -->
+
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </body>
 </html>
